tests/errors/casts/undefined-element-array-cast.fn
---
Description: Array cast with undefined element type
Expected: FN3000
---

type Program
{
    fn Main -> i32
    {
        var x: i32 = 5
        var a = (Blah[])x
        return 0
    }
}
